[package]
name = "min"
description = "html, css, and js minifier"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/min"
repository = "https://github.com/EthanJustice/min"
license = "MIT"
publish = false

[dependencies]
